[package]
name = "crawn"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
owo-colors = "4.2.3"
reqwest = { version = "0.13.1", default-features = false, features = ["native-tls", "http2"] }
resext = "0.7.0"
scraper = "0.25.0"
time = { version = "0.3.45", features = ["formatting", "macros", "local-offset"] }
time-macros = "0.2.24"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "io-util", "sync", "fs"] }
url = "2.5.8"
strip-ansi-escapes = "0.2.1"
rand = "0.9.2"
