[package]
name = "crawn"
version = "0.1.0"
edition = "2024"
authors = ["Taha Mahmoud <tahamahmoud7097@gmail.com>"]
categories = ["asynchronous", "web-programming", "command-line-utilities", "network-programming", "web-programming::http-client"]
description = "A utility for web crawling and scraping"
keywords = ["cli", "http", "web-crawler", "async", "web-scraping"]
license = "MIT"
repository = "https://github.com/Tahaa-Dev/crawn"
readme = "README.md"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
owo-colors = "4.2.3"
reqwest = { version = "0.13.1", default-features = false, features = ["native-tls", "http2"] }
resext = "0.7.0"
scraper = "0.25.0"
time = { version = "0.3.45", features = ["formatting", "macros", "local-offset"] }
time-macros = "0.2.24"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
strip-ansi-escapes = "0.2.1"
rand = "0.9.2"
