[package]
name = "crawn"
version = "0.2.0"
edition = "2024"
authors = ["Taha Mahmoud <tahamahmoud7097@gmail.com>"]
categories = ["asynchronous", "concurrency", "command-line-utilities", "web-programming::http-client"]
description = "A utility for web crawling and scraping"
keywords = ["cli", "concurrency", "web-crawler", "async", "web-scraping"]
license = "MIT"
repository = "https://github.com/Tahaa-Dev/crawn"
readme = "README.md"

[dependencies]
# Runtime
tokio = { version = "1.49.0", features = ["full"] }

# HTTP Client
reqwest = { version = "0.13.1", default-features = false, features = ["native-tls", "http2"] }

# CLI
clap = { version = "4.5.54", features = ["derive"] }

# Scraping & URL parsing
scraper = "0.25.0"
url = "2.5.8"

# Error handling
resext = "1.0.2"

# Colored output
owo-colors = "4.2.3"

# Timestamps (logging)
time = { version = "0.3.45", features = ["formatting", "macros", "local-offset"] }
time-macros = "0.2.24"

# Utilities
strip-ansi-escapes = "0.2.1"
rand = "0.9.2"
